--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
       Σε κάθε σωστή απάντηση, κερδίζεις πόντους με έναν πολλαπλασιαστή που αυξάνεται κάθε 5 συνεχόμενες σωστές απαντήσεις.<br>
       Διαθέτεις 40 δευτερόλεπτα (το χρονόμετρο ξεκινά με το πρώτο κλικ).<br>
       Με το πλήκτρο «Εκτύπωση» αποτυπώνεται όλο το περιεχόμενο, ενώ με το πλήκτρο «Resume» αρχίζει νέα καταγραφή (π.χ. Παίκτης 2) χωρίς να χάνονται οι προηγούμενες καταγραφές.<br>
-      Το πλήκτρο «ΡίσΚΟ» θα τυχαία είτε διπλασιάσει είτε μειώσει στο μισό τους πόντους, εμφανίζοντας το αντίστοιχο μήνυμα.
+      Το πλήκτρο «Ρίσκο» θα τυχαία είτε διπλασιάσει είτε μειώσει στο μισό τους πόντους, εμφανίζοντας το αντίστοιχο μήνυμα.
     </div>
   </div>
   
